# bevy-charts

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
examples/: bar_chart.rs  line_chart.rs  scatter_chart.rs  showcase.rs  surface_chart.rs
openspec/changes/add-chart-text-labels/: design.md  proposal.md  tasks.md
openspec/changes/add-chart-text-labels/specs/chart-labels/: spec.md
openspec/changes/add-chart-text-labels/specs/chart-styling/: spec.md
openspec/changes/archive/2026-07-24-bootstrap-bevy-charts-plugin/: proposal.md  tasks.md
openspec/changes/bootstrap-bevy-charts-plugin/: design.md  tasks.md
openspec/changes/bootstrap-bevy-charts-plugin/specs/chart-core/: spec.md
openspec/changes/bootstrap-bevy-charts-plugin/specs/chart-styling/: spec.md
openspec/changes/bootstrap-bevy-charts-plugin/specs/chart-types/: spec.md
openspec/specs/chart-core/: spec.md
openspec/specs/chart-styling/: spec.md
openspec/specs/chart-types/: spec.md
src/: axis.rs  data.rs  lib.rs  palette.rs
src/charts/: bar.rs  histogram.rs  line.rs  mod.rs  scatter.rs  surface.rs
tests/: rebuild.rs
