[package]
name = "bevy_charts"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
description = "3D charts and graphs for the Bevy game engine"
repository = "https://github.com/Inhuman-Entertainment/bevy-charts"
readme = "README.md"
keywords = ["bevy", "chart", "graph", "plot", "visualization"]
categories = ["game-development", "visualization"]
exclude = ["openspec/", ".claude/", ".github/"]

[dependencies]
# Only the rendering pieces a chart needs. Downstream games pick the rest.
bevy = { version = "0.19", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_pbr",
] }

# Axis tick placement ("nice numbers") is a solved problem; reuse plotters'
# `Ranged::key_points` rather than reimplementing it. With default features off
# this pulls in no rendering backend, just the coordinate math.
plotters = { version = "0.3.7", default-features = false }

[dev-dependencies]
# Examples need a full app: window, winit, camera pipeline, logging.
bevy = { version = "0.19", default-features = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
